add getOneWaveStation
